alignment fix
centered task entry section

--- a/FedEx1.css
+++ b/FedEx1.css
@@ -267,24 +267,24 @@ th {
 
 .console{
 
-    background-color: rgb(0, 0, 0);/*//purple*/
+    background-color: rgb(0, 0, 0);/*//black*/
     border: none;
     border-radius: 15px;
     color: white;
     padding: 15px 32px;
-    text-align: center;
+   /* text-align: center;*/
     text-decoration: none;
     display: inline-block;
     font-size: 25px;
     margin: 4px 10px;
-    cursor: pointer;
-    float: center;
+   /* cursor: pointer;*/
+    /*float: center;*/
     box-shadow:0 9px rgb(60, 0, 121); /*grey*/
     font-family: Arial;
 
-   /* position: absolute;*/
+    position: relative;
   
-   /* left:5%;*/
+    right:5%;
   
 }
 
